Dump current state on unit tests